# frepo

./: .gitignore  Makefile  Makefile.am  configure.ac  git.c  git.h  main.c  manifest.c  manifest.h  xml.c  xml.h
include/: git.h  manifest.h  path.h  settings.h  xml.h
src/: git.c  group.c  group.h  main.c  manifest.c  manifest.h  path.c  settings.c  settings.h  xml.c
